Fixing some layout issues, fleshing out the contact page.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,3 +15,7 @@ body {
 .center-text {
 	text-align: center;
 }
+
+.url-link {
+  font-size: .8em;
+}
